--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "mongoose": "^7.2.3"
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^5.4.20"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
